@@ -31,7 +31,7 @@
  * Front End creating/editing/deleting records authenticated by fe_user login.
  * A variant restricted to front end user self-registration and profile maintenance, with a number of enhancements (see the manual).
  *
- * $Id$
+ * $Id: class.tx_agency_control_main.php 90318 2015-12-07 14:21:14Z franzholz $
  *
  * @author	Kasper Skårhøj <kasperYYYY@typo3.com>
  * @author	Stanislas Rolland <typo3(arobas)sjbr.ca>
@@ -214,7 +214,7 @@ class tx_agency_control_main {
 			$cObj
 		);
 
-		$this->langObj->init(
+		$this->langObj->init1(
 			$pibaseObj,
 			$cObj,
 			$conf,
