@@ -29,7 +29,7 @@
  *
  * language functions
  *
- * $Id$
+ * $Id: class.tx_agency_lang.php 87854 2014-12-27 21:18:09Z franzholz $
  *
  * @author	Stanislas Rolland <typo3(arobas)sjbr.ca>
  * @author	Franz Holzinger <franz@ttproducts.de>
@@ -44,7 +44,7 @@
 class tx_agency_lang extends tx_div2007_alpha_language_base {
 	public $allowedSuffixes = array('formal', 'informal'); // list of allowed suffixes
 
-	public function init ($pObj, $cObj, $conf, $scriptRelPath, $extKey) {
+	public function init1 ($pObj, $cObj, $conf, $scriptRelPath, $extKey) {
 
 		parent::init(
 			$cObj,
